#31 Created a CDN and served website from S3        Without public acess to the bucket.

--- a/public/error.html
+++ b/public/error.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<header><Main>Error Page</Main></header>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootcampers</title>
+</head>
 <body>
-    <h1>Error...  Please contact Adminstrator </h1>
+    <header><Main>Error Page</Main></header>
+    <h1> Error...  Please contact Adminstrator</h1>
 </body>
+</html>
