--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<header><Main>Title Page</Main></header>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootcampers</title>
+</head>
 <body>
+    <header><Main>Title Page</Main></header>
     <h1> Welcome Bootcampers 2023</h1>
 </body>
+</html>
