--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <header><Main>Title Page</Main></header>
-    <h1> Welcome Bootcampers 2023</h1>
+    <h1> Welcome Terraform Bootcampers 2023</h1>
 </body>
 </html>
