#35 Added Provisioner for Invalidating Cloudfront distribution

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Bootcampers</title>
 </head>
 <body>
-    <header><Main>Title Page</Main></header>
     <h1> Welcome Terraform Bootcampers 2023</h1>
+    <p><abbr>AWS</abbr>(Amazon Web Services) is the world's most comprehensive cloud platform, with services supported by data centers globally.</p>
 </body>
 </html>
