Added Local http-server to the project

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1> Welcome Terraform Bootcampers 2023</h1>
     <p><abbr>AWS</abbr>(Amazon Web Services) is the world's most comprehensive cloud platform, with services supported by data centers globally.</p>
+    <img src="/assets/dmc3.jpg" alt="Devil May Cry" sizes="(max-width: 600px) 200px, 50vw"/>
+    <img src="/assets/darksider.jpg" alt="Darksiders" sizes="(max-width: 600px) 200px, 50vw"/>
 </body>
 </html>
